--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "ioredis": "^5.4.1",
+    "multer": "^2.0.2",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4"
